--- a/styleguide/stylesheets/styleguide.css
+++ b/styleguide/stylesheets/styleguide.css
@@ -706,15 +706,25 @@ body > main [role="grid"][id$="-grid"] [role="gridcell"] > section:not([role="gr
 
 body > main [role="grid"][id$="-grid"]#nested-grid > [role="gridcell"]:first-of-type { background-color: transparent; }
 
+body > header { background-color: var(--sf-color-light); }
+
+@media screen and (max-width: 33.74em) { body > header[sf-unit] > [sf-outer-wrapper] > [sf-inner-wrapper] { padding-top: 1.5rem; } }
+
 @media screen and (max-width: 33.74em) { body > header[sf-unit] { padding-bottom: 0; } }
 
 body #logo [role="grid"] > [role="gridcell"]:nth-child(1), body #logo-sample [role="grid"] > [role="gridcell"]:nth-child(1) { margin-right: 1%; width: 15%; }
 
-@media screen and (min-width: 33.75em) { body #logo [role="grid"] > [role="gridcell"]:nth-child(1), body #logo-sample [role="grid"] > [role="gridcell"]:nth-child(1) { width: 5%; } }
+@media screen and (min-width: 33.75em) { body #logo [role="grid"] > [role="gridcell"]:nth-child(1), body #logo-sample [role="grid"] > [role="gridcell"]:nth-child(1) { width: 6%; } }
 
-body #logo [role="grid"] > [role="gridcell"]:nth-child(2) h1, body #logo-sample [role="grid"] > [role="gridcell"]:nth-child(2) h1 { margin: 0; padding: 0; line-height: 0.83; font-weight: 400; font-family: "Quicksand", -apple-system, Helvetica, Calibri, Arial, sans-serif; text-align: right; font-size: 3.65rem; }
+body #logo [role="grid"] > [role="gridcell"]:nth-child(1) > a, body #logo-sample [role="grid"] > [role="gridcell"]:nth-child(1) > a { display: inline-block; font-size: 3.65rem; line-height: 4.5rem; }
 
-@media screen and (min-width: 33.75em) { body #logo [role="grid"] > [role="gridcell"]:nth-child(2) h1, body #logo-sample [role="grid"] > [role="gridcell"]:nth-child(2) h1 { font-size: 4.9rem; line-height: 0.75; text-align: left; } }
+@media screen and (min-width: 33.75em) { body #logo [role="grid"] > [role="gridcell"]:nth-child(1) > a, body #logo-sample [role="grid"] > [role="gridcell"]:nth-child(1) > a { font-size: 4.7rem; line-height: 4.7rem; } }
+
+body #logo [role="grid"] > [role="gridcell"]:nth-child(2) h1, body #logo-sample [role="grid"] > [role="gridcell"]:nth-child(2) h1 { margin: 0; padding: 0; font-weight: 400; font-family: "Quicksand", -apple-system, Helvetica, Calibri, Arial, sans-serif; text-align: right; font-size: 3.65rem; line-height: 4.75rem; }
+
+@media screen and (min-width: 33.75em) { body #logo [role="grid"] > [role="gridcell"]:nth-child(2) h1, body #logo-sample [role="grid"] > [role="gridcell"]:nth-child(2) h1 { font-size: 5rem; line-height: 5rem; text-align: left; } }
+
+@media screen and (min-width: 75em) { body #logo [role="grid"] > [role="gridcell"]:nth-child(2) h1, body #logo-sample [role="grid"] > [role="gridcell"]:nth-child(2) h1 { font-size: 4.3rem; } }
 
 body #logo [role="grid"] > [role="gridcell"]:nth-child(2) h1 a, body #logo-sample [role="grid"] > [role="gridcell"]:nth-child(2) h1 a { color: var(--sf-color-dark); text-decoration: none; }
 
@@ -722,9 +732,11 @@ body #logo [role="grid"] > [role="gridcell"]:nth-child(3), body #logo-sample [ro
 
 @media screen and (min-width: 33.75em) { body #logo [role="grid"] > [role="gridcell"]:nth-child(3), body #logo-sample [role="grid"] > [role="gridcell"]:nth-child(3) { margin-top: 0; text-align: right; } }
 
+@media screen and (min-width: 33.75em) { body #logo [role="grid"] > [role="gridcell"]:nth-child(3) section, body #logo-sample [role="grid"] > [role="gridcell"]:nth-child(3) section { padding-top: 0.5rem; } }
+
 body #logo [role="grid"] > [role="gridcell"]:nth-child(3) h3, body #logo [role="grid"] > [role="gridcell"]:nth-child(3) h4, body #logo-sample [role="grid"] > [role="gridcell"]:nth-child(3) h3, body #logo-sample [role="grid"] > [role="gridcell"]:nth-child(3) h4 { margin-top: 0; color: var(--sf-color-dark); }
 
-body #logo [role="grid"] > [role="gridcell"]:nth-child(3) h3, body #logo-sample [role="grid"] > [role="gridcell"]:nth-child(3) h3 { margin-bottom: 0.5rem; }
+body #logo [role="grid"] > [role="gridcell"]:nth-child(3) h3, body #logo-sample [role="grid"] > [role="gridcell"]:nth-child(3) h3 { margin-bottom: 0; }
 
 body #logo [role="grid"] > [role="gridcell"]:nth-child(3) h4, body #logo-sample [role="grid"] > [role="gridcell"]:nth-child(3) h4 { margin-bottom: 0; }
 
