--- a/styleguide/scss/_config-measurements.scss
+++ b/styleguide/scss/_config-measurements.scss
@@ -12,7 +12,7 @@
     // ------------------------------------------------------------------
     // Defines the line thickness for borders, <hr> tags, etc.
     // Use rem units
-    --line-width:  0.08rem;
+    --sf-line-width:  0.08rem;
 
 
     // OUTER UNIT MEASUREMENTS
