--- a/styleguide/scss/core/_core-helpers.scss
+++ b/styleguide/scss/core/_core-helpers.scss
@@ -535,10 +535,10 @@
 
 @function line-style() {
 
-    @return solid var(--line-width) var(--sf-color-line);
+    @return solid var(--sf-line-width) var(--sf-color-line);
 }
 
 @function tablet-portrait-line-style() {
 
-    @return solid var(--line-width) var(--sf-color-line);
+    @return solid var(--sf-line-width) var(--sf-color-line);
 }
