--- a/styleguide/scss/custom/_layout-footer.scss
+++ b/styleguide/scss/custom/_layout-footer.scss
@@ -11,6 +11,8 @@ body {
 
         padding-bottom: 8rem;
 
+        background-color: var(--sf-color-light);
+
         @include sf-media($from: tablet-portrait) {
 
             padding-bottom: 3rem;
