--- a/styleguide/scss/_config-colors.scss
+++ b/styleguide/scss/_config-colors.scss
@@ -2,6 +2,14 @@
 //  $CONFIG-COLORS
 //------------------------------------//
 
+@mixin sf-generate-css-color-property($name: "default", $hex-color: #ffffff, $hex-contrast-color: #000000, $alpha: 1.0, $shade-pct: 15%, $tint-pct: 20%) {
+
+    --sf-color-#{$name}: #{rgba($hex-color, $alpha)};
+    --sf-color-#{$name}-contrast: #{rgba($hex-contrast-color, $alpha)};
+    --sf-color-#{$name}-shade: #{rgba(scale-color($hex-color, $lightness: $shade-pct * -1), $alpha)};
+    --sf-color-#{$name}-tint: #{rgba(scale-color($hex-color, $lightness: $tint-pct), $alpha)};
+}
+
 // COLOR SETS
 // Collections of colors with defined contrast, tint, and shade variations
 // to help with using them as foreground and background colors.
@@ -9,74 +17,94 @@
 :root {
 
     // PRIMARY
-    $hex-color: #3880ff;
-    --sf-color-primary: #{rgba($hex-color, 1.0)};
-    --sf-color-primary-contrast: #{rgba(#ffffff, 1.0)};
-    --sf-color-primary-shade: #{rgba(scale-color(darken($hex-color, 15%), $lightness: -15%), 1.0)};
-    --sf-color-primary-tint: #{rgba(scale-color(lighten($hex-color, 20%), $lightness: 20%), 1.0)};
+    @include sf-generate-css-color-property(
+        $name: "primary", 
+        $hex-color: #3880ff, 
+        $hex-contrast-color: #ffffff, 
+        $alpha: 1.0, 
+        $shade-pct: 15%, 
+        $tint-pct: 20%);
 
     // SECONDARY
-    $hex-color: #0cd1e8;
-    --sf-color-secondary: #{rgba($hex-color, 1.0)};
-    --sf-color-secondary-contrast: #{rgba(#ffffff, 1.0)};
-    --sf-color-secondary-shade: #{rgba(scale-color(darken($hex-color, 15%), $lightness: -15%), 1.0)};
-    --sf-color-secondary-tint: #{rgba(scale-color(lighten($hex-color, 20%), $lightness: 20%), 1.0)};
+    @include sf-generate-css-color-property(
+        $name: "secondary", 
+        $hex-color: #0cd1e8, 
+        $hex-contrast-color: #ffffff, 
+        $alpha: 1.0, 
+        $shade-pct: 15%, 
+        $tint-pct: 20%);
 
     // TERTIARY
-    $hex-color: #7044ff;
-    --sf-color-tertiary: #{rgba($hex-color, 1.0)};
-    --sf-color-tertiary-contrast: #{rgba(#ffffff, 1.0)};
-    --sf-color-tertiary-shade: #{rgba(scale-color(darken($hex-color, 15%), $lightness: -15%), 1.0)};
-    --sf-color-tertiary-tint: #{rgba(scale-color(lighten($hex-color, 20%), $lightness: 20%), 1.0)};
+    @include sf-generate-css-color-property(
+        $name: "tertiary", 
+        $hex-color: #7044ff, 
+        $hex-contrast-color: #ffffff, 
+        $alpha: 1.0, 
+        $shade-pct: 15%, 
+        $tint-pct: 20%);
 
     // BUTTONS
-    $hex-color: #14a219;
-    --sf-color-buttons: #{rgba($hex-color, 1.0)};
-    --sf-color-buttons-contrast: #{rgba(#ffffff, 1.0)};
-    --sf-color-buttons-shade: #{rgba(scale-color(darken($hex-color, 15%), $lightness: -15%), 1.0)};
-    --sf-color-buttons-tint: #{rgba(scale-color(lighten($hex-color, 20%), $lightness: 20%), 1.0)};
+    @include sf-generate-css-color-property(
+        $name: "buttons", 
+        $hex-color: #14a219, 
+        $hex-contrast-color: #ffffff, 
+        $alpha: 1.0, 
+        $shade-pct: 15%, 
+        $tint-pct: 20%);
 
     // SUCCESS
-    $hex-color: #14a219;
-    --sf-color-success: #{rgba($hex-color, 1.0)};
-    --sf-color-success-contrast: #{rgba(#ffffff, 1.0)};
-    --sf-color-success-shade: #{rgba(scale-color(darken($hex-color, 15%), $lightness: -15%), 1.0)};
-    --sf-color-success-tint: #{rgba(scale-color(lighten($hex-color, 20%), $lightness: 20%), 1.0)};
+    @include sf-generate-css-color-property(
+        $name: "success", 
+        $hex-color: #14a219, 
+        $hex-contrast-color: #ffffff, 
+        $alpha: 1.0, 
+        $shade-pct: 15%, 
+        $tint-pct: 20%);
 
     // WARNING
-    $hex-color: #ffce00;
-    --sf-color-warning: #{rgba($hex-color, 1.0)};
-    --sf-color-warning-contrast: #{rgba(#ffffff, 1.0)};
-    --sf-color-warning-shade: #{rgba(scale-color(darken($hex-color, 15%), $lightness: -15%), 1.0)};
-    --sf-color-warning-tint: #{rgba(scale-color(lighten($hex-color, 20%), $lightness: 20%), 1.0)};
+    @include sf-generate-css-color-property(
+        $name: "warning", 
+        $hex-color: #ffce00, 
+        $hex-contrast-color: #ffffff, 
+        $alpha: 1.0, 
+        $shade-pct: 15%, 
+        $tint-pct: 20%);
 
     // DANGER
-    $hex-color: #f04141;
-    --sf-color-danger: #{rgba($hex-color, 1.0)};
-    --sf-color-danger-contrast: #{rgba(#ffffff, 1.0)};
-    --sf-color-danger-shade: #{rgba(scale-color(darken($hex-color, 15%), $lightness: -15%), 1.0)};
-    --sf-color-danger-tint: #{rgba(scale-color(lighten($hex-color, 20%), $lightness: 20%), 1.0)};
+    @include sf-generate-css-color-property(
+        $name: "danger", 
+        $hex-color: #f04141, 
+        $hex-contrast-color: #ffffff, 
+        $alpha: 1.0, 
+        $shade-pct: 15%, 
+        $tint-pct: 20%);
 
     // LIGHT
-    $hex-color: #f4f5f8;
-    --sf-color-light: #{rgba($hex-color, 1.0)};
-    --sf-color-light-contrast: #{rgba(#000000, 1.0)};
-    --sf-color-light-shade: #{rgba(scale-color(darken($hex-color, 15%), $lightness: -15%), 1.0)};
-    --sf-color-light-tint: #{rgba(scale-color(lighten($hex-color, 20%), $lightness: 20%), 1.0)};
+    @include sf-generate-css-color-property(
+        $name: "light", 
+        $hex-color: #f4f5f8, 
+        $hex-contrast-color: #ffffff, 
+        $alpha: 1.0, 
+        $shade-pct: 15%, 
+        $tint-pct: 20%);
 
     // MEDIUM
-    $hex-color: #989aa2;
-    --sf-color-medium: #{rgba($hex-color, 1.0)};
-    --sf-color-medium-contrast: #{rgba(#ffffff, 1.0)};
-    --sf-color-medium-shade: #{rgba(scale-color(darken($hex-color, 15%), $lightness: -15%), 1.0)};
-    --sf-color-medium-tint: #{rgba(scale-color(lighten($hex-color, 20%), $lightness: 20%), 1.0)};
+    @include sf-generate-css-color-property(
+        $name: "medium", 
+        $hex-color: #989aa2, 
+        $hex-contrast-color: #ffffff, 
+        $alpha: 1.0, 
+        $shade-pct: 15%, 
+        $tint-pct: 20%);
 
     // DARK
-    $hex-color: #222428;
-    --sf-color-dark: #{rgba($hex-color, 1.0)};
-    --sf-color-dark-contrast: #{rgba(#ffffff, 1.0)};
-    --sf-color-dark-shade: #{rgba(scale-color(darken($hex-color, 15%), $lightness: -15%), 1.0)};
-    --sf-color-dark-tint: #{rgba(scale-color(lighten($hex-color, 20%), $lightness: 20%), 1.0)};
+    @include sf-generate-css-color-property(
+        $name: "dark", 
+        $hex-color: #222428, 
+        $hex-contrast-color: #ffffff, 
+        $alpha: 1.0, 
+        $shade-pct: 15%, 
+        $tint-pct: 20%);
 
     // Form field color assignments
     --sf-disabled-field-bg-color: var(--sf-color-light);
