--- a/styleguide/stylesheets/styleguide.css
+++ b/styleguide/stylesheets/styleguide.css
@@ -3,7 +3,7 @@
 @import url("https://fonts.googleapis.com/css?family=Source+Code+Pro");
 span#sfumato-version[role="status"]::after { content: "2.0b1"; }
 
-:root { --sf-color-primary: #3880ff; --sf-color-primary-contrast: white; --sf-color-primary-shade: #0048c7; --sf-color-primary-tint: #b1cdff; --sf-color-secondary: #0cd1e8; --sf-color-secondary-contrast: white; --sf-color-secondary-shade: #077a87; --sf-color-secondary-tint: #82ecf9; --sf-color-tertiary: #7044ff; --sf-color-tertiary-contrast: white; --sf-color-tertiary-shade: #3100d2; --sf-color-tertiary-tint: #cbbbff; --sf-color-buttons: #14a219; --sf-color-buttons-contrast: white; --sf-color-buttons-shade: #0a500c; --sf-color-buttons-tint: #5eeb63; --sf-color-success: #14a219; --sf-color-success-contrast: white; --sf-color-success-shade: #0a500c; --sf-color-success-tint: #5eeb63; --sf-color-warning: #ffce00; --sf-color-warning-contrast: white; --sf-color-warning-shade: #987b00; --sf-color-warning-tint: #ffe785; --sf-color-danger: #f04141; --sf-color-danger-contrast: white; --sf-color-danger-shade: #b40e0e; --sf-color-danger-tint: #f9b3b3; --sf-color-light: #f4f5f8; --sf-color-light-contrast: black; --sf-color-light-shade: #9fa8c2; --sf-color-light-tint: white; --sf-color-medium: #989aa2; --sf-color-medium-contrast: white; --sf-color-medium-shade: #60626a; --sf-color-medium-tint: #d7d8db; --sf-color-dark: #222428; --sf-color-dark-contrast: white; --sf-color-dark-shade: black; --sf-color-dark-tint: #707683; --sf-disabled-field-bg-color: var(--sf-color-light); --sf-color-form-field-line: rgba(0, 0, 0, 0.35); --sf-color-check-background: rgba(255, 255, 255, 0.05); --sf-color-line: rgba(0, 0, 0, 0.15); }
+:root { --sf-color-primary: #3880ff; --sf-color-primary-contrast: white; --sf-color-primary-shade: #0962ff; --sf-color-primary-tint: #6099ff; --sf-color-secondary: #0cd1e8; --sf-color-secondary-contrast: white; --sf-color-secondary-shade: #0ab2c5; --sf-color-secondary-tint: #35e0f5; --sf-color-tertiary: #7044ff; --sf-color-tertiary-contrast: white; --sf-color-tertiary-shade: #4b14ff; --sf-color-tertiary-tint: #8d69ff; --sf-color-buttons: #14a219; --sf-color-buttons-contrast: white; --sf-color-buttons-shade: #118a15; --sf-color-buttons-tint: #1bdc22; --sf-color-success: #14a219; --sf-color-success-contrast: white; --sf-color-success-shade: #118a15; --sf-color-success-tint: #1bdc22; --sf-color-warning: #ffce00; --sf-color-warning-contrast: white; --sf-color-warning-shade: #d9af00; --sf-color-warning-tint: #ffd833; --sf-color-danger: #f04141; --sf-color-danger-contrast: white; --sf-color-danger-shade: #ed1717; --sf-color-danger-tint: #f36767; --sf-color-light: #f4f5f8; --sf-color-light-contrast: white; --sf-color-light-shade: #c7ccdb; --sf-color-light-tint: #f6f7f9; --sf-color-medium: #989aa2; --sf-color-medium-contrast: white; --sf-color-medium-shade: #7f828c; --sf-color-medium-tint: #adaeb5; --sf-color-dark: #222428; --sf-color-dark-contrast: white; --sf-color-dark-shade: #1d1f22; --sf-color-dark-tint: #4a4e57; --sf-disabled-field-bg-color: var(--sf-color-light); --sf-color-form-field-line: rgba(0, 0, 0, 0.35); --sf-color-check-background: rgba(255, 255, 255, 0.05); --sf-color-line: rgba(0, 0, 0, 0.15); }
 
 :root { --font-body: 'Roboto', -apple-system, BlinkMacSystemFont, Helvetica, Calibri, Arial, sans-serif; --font-mono: 'Source Code Pro', -apple-system-mono, 'Menlo', 'Consolas', 'Monaco', 'Andale Mono', 'Lucida Console', 'Lucida Sans Typewriter', 'Courier', 'Courier New', monospace; --font-head: var(--font-body); --mono-font-size: 1rem; --mono-line-height: 1.4; --headline-top-margin-stacked: 2rem; --headline-top-margin: 3rem; --headline-bottom-margin: 1.5rem; --paragraph-bottom-margin: 1.5rem; --h1-font-size: 2.4rem; --h1-line-height: 1.35; --h2-font-size: 1.8rem; --h2-line-height: 1.35; --h3-font-size: 1.5rem; --h3-line-height: 1.35; --h4-font-size: 1.25rem; --h4-line-height: 1.35; --h5-font-size: 1.1rem; --h5-line-height: 1.5; --h6-font-size: 1.0rem; --h6-line-height: 1.5; --h1-multiplier: 0.7; --phablet-h1-multiplier: 1.0; --tablet-portrait-h1-multiplier: 1.0; --tablet-landscape-h1-multiplier: 1.0; --notebook-h1-multiplier: 1.0; --desktop-h1-multiplier: 1.0; --elastic-h1-multiplier: 1.0; --h2-multiplier: 0.8; --phablet-h2-multiplier: 1.0; --tablet-portrait-h2-multiplier: 1.0; --tablet-landscape-h2-multiplier: 1.0; --notebook-h2-multiplier: 1.0; --desktop-h2-multiplier: 1.0; --elastic-h2-multiplier: 1.0; --h3-multiplier: 0.9; --phablet-h3-multiplier: 1.0; --tablet-portrait-h3-multiplier: 1.0; --tablet-landscape-h3-multiplier: 1.0; --notebook-h3-multiplier: 1.0; --desktop-h3-multiplier: 1.0; --elastic-h3-multiplier: 1.0; --h4-multiplier: 0.9; --phablet-h4-multiplier: 1.0; --tablet-portrait-h4-multiplier: 1.0; --tablet-landscape-h4-multiplier: 1.0; --notebook-h4-multiplier: 1.0; --desktop-h4-multiplier: 1.0; --elastic-h4-multiplier: 1.0; --h5-multiplier: 1.0; --phablet-h5-multiplier: 1.0; --tablet-portrait-h5-multiplier: 1.0; --tablet-landscape-h5-multiplier: 1.0; --notebook-h5-multiplier: 1.0; --desktop-h5-multiplier: 1.0; --elastic-h5-multiplier: 1.0; --h6-multiplier: 1.0; --phablet-h6-multiplier: 1.0; --tablet-portrait-h6-multiplier: 1.0; --tablet-landscape-h6-multiplier: 1.0; --notebook-h6-multiplier: 1.0; --desktop-h6-multiplier: 1.0; --elastic-h6-multiplier: 1.0; }
 
@@ -706,8 +706,6 @@ body > main [role="grid"][id$="-grid"] [role="gridcell"] > section:not([role="gr
 
 body > main [role="grid"][id$="-grid"]#nested-grid > [role="gridcell"]:first-of-type { background-color: transparent; }
 
-body > header { background-color: var(--sf-color-light); }
-
 @media screen and (max-width: 33.74em) { body > header[sf-unit] > [sf-outer-wrapper] > [sf-inner-wrapper] { padding-top: 1.5rem; } }
 
 @media screen and (max-width: 33.74em) { body > header[sf-unit] { padding-bottom: 0; } }
@@ -756,7 +754,7 @@ body #logo:not(#logo) [role="grid"] > [role="gridcell"]:nth-child(3) h3, body #l
 
 body #logo:not(#logo) [role="grid"] > [role="gridcell"]:nth-child(3) h4, body #logo-sample:not(#logo) [role="grid"] > [role="gridcell"]:nth-child(3) h4 { font-size: 0.9rem; }
 
-body > footer[sf-unit] { font-size: 0.9rem; text-align: center; padding-bottom: 8rem; background-color: var(--sf-color-light); }
+body > footer[sf-unit] { font-size: 0.9rem; text-align: center; padding-bottom: 8rem; }
 
 @media screen and (min-width: 33.75em) { body > footer[sf-unit] { padding-bottom: 3rem; }
   body > footer[sf-unit] > [sf-outer-wrapper] > [sf-inner-wrapper] { padding-top: 2rem; } }
@@ -771,7 +769,7 @@ body > footer[sf-unit] p:last-child { margin-bottom: 0; }
   body > footer[sf-unit] [role="gridcell"]:nth-child(1) { text-align: left; }
   body > footer[sf-unit] [role="gridcell"]:nth-child(2) { text-align: right; } }
 
-html, body { background-color: white; color: black; }
+html, body { background-color: var(--sf-color-light); color: black; }
 
 body > main > section[separator] { padding-bottom: var(--vertical-unit-padding); }
 
@@ -779,7 +777,7 @@ body > main > section[separator] { padding-bottom: var(--vertical-unit-padding);
 
 @media screen and (min-width: 75em) { body > main > section[separator] { padding-bottom: var(--elastic-vertical-unit-padding); } }
 
-body > main > [sf-unit] { overflow: hidden; }
+body > main > [sf-unit] { background-color: white; overflow: hidden; }
 
 @media screen and (max-width: 33.74em) { body > main > [sf-unit]:first-of-type > [sf-outer-wrapper] > [sf-inner-wrapper] { padding-top: 1rem; } }
 
