Fixed anchor colors

--- a/styleguide/scss/styleguide.scss
+++ b/styleguide/scss/styleguide.scss
@@ -19,6 +19,11 @@ html, body {
 
     background-color: var(--sf-color-light);
     color: black;
+
+    a {
+
+        color: var(--sf-color-primary);
+    }
 }
 
 body {
