--- a/styleguide/scss/_config-typography.scss
+++ b/styleguide/scss/_config-typography.scss
@@ -46,8 +46,8 @@ $elastic-line-height: false;
     --mono-line-height: 1.4;
 
     // REQUIRED: Headline top and bottom margins.
-    // Top is set to zero for any headline that immediately  follows another headline.
-    --headline-top-margin-stacked: 2rem; // Stacked mobile layouts
+    // Top is set to zero for any headline that immediately follows another headline.
+    --headline-top-margin-stacked: 2rem; // Stacked mobile layouts (<h#> that follow another <h#>)
     --headline-top-margin: 3rem;
     --headline-bottom-margin: 1.5rem;
 
