--- a/styleguide/scss/custom/_layout-header.scss
+++ b/styleguide/scss/custom/_layout-header.scss
@@ -34,19 +34,20 @@ body {
 
                 &:nth-child(1) {
 
-                    margin-right: 1%;
-                    width: 15%;
+                    margin-right: 0.5%;
+                    width: 17%;
 
                     @include sf-media($from: tablet-portrait) {
 
-                        width: 6%;
+                        width: 7%;
                     }
 
                     & > a {
 
                         display: inline-block;
-                        font-size: 3.65rem;
+                        // font-size: 3.65rem;
                         line-height: 4.5rem;
+                        margin-right: 0.5rem;
 
                         @include sf-media($from: tablet-portrait) {
 
@@ -64,8 +65,8 @@ body {
                         padding: 0;
                         font-weight: 400;
                         font-family: $font-logo;
-                        text-align: right;
-                        font-size: 3.65rem;
+                        text-align: left;
+                        font-size: 3.25rem;
                         line-height: 4.75rem;
 
                         @include sf-media($from: tablet-portrait) {
@@ -84,6 +85,13 @@ body {
 
                             color: var(--sf-color-dark);
                             text-decoration: none;
+                        }
+
+                        sup {
+
+                            font-size: 65%;
+                            top: -0.4em;
+                            margin-left: 0.25rem;
                         }
                     }
                 }
