--- a/styleguide/stylesheets/styleguide.css
+++ b/styleguide/stylesheets/styleguide.css
@@ -710,21 +710,23 @@ body > main [role="grid"][id$="-grid"]#nested-grid > [role="gridcell"]:first-of-
 
 @media screen and (max-width: 33.74em) { body > header[sf-unit] { padding-bottom: 0; } }
 
-body #logo [role="grid"] > [role="gridcell"]:nth-child(1), body #logo-sample [role="grid"] > [role="gridcell"]:nth-child(1) { margin-right: 1%; width: 15%; }
+body #logo [role="grid"] > [role="gridcell"]:nth-child(1), body #logo-sample [role="grid"] > [role="gridcell"]:nth-child(1) { margin-right: 0.5%; width: 17%; }
 
-@media screen and (min-width: 33.75em) { body #logo [role="grid"] > [role="gridcell"]:nth-child(1), body #logo-sample [role="grid"] > [role="gridcell"]:nth-child(1) { width: 6%; } }
+@media screen and (min-width: 33.75em) { body #logo [role="grid"] > [role="gridcell"]:nth-child(1), body #logo-sample [role="grid"] > [role="gridcell"]:nth-child(1) { width: 7%; } }
 
-body #logo [role="grid"] > [role="gridcell"]:nth-child(1) > a, body #logo-sample [role="grid"] > [role="gridcell"]:nth-child(1) > a { display: inline-block; font-size: 3.65rem; line-height: 4.5rem; }
+body #logo [role="grid"] > [role="gridcell"]:nth-child(1) > a, body #logo-sample [role="grid"] > [role="gridcell"]:nth-child(1) > a { display: inline-block; line-height: 4.5rem; margin-right: 0.5rem; }
 
 @media screen and (min-width: 33.75em) { body #logo [role="grid"] > [role="gridcell"]:nth-child(1) > a, body #logo-sample [role="grid"] > [role="gridcell"]:nth-child(1) > a { font-size: 4.7rem; line-height: 4.7rem; } }
 
-body #logo [role="grid"] > [role="gridcell"]:nth-child(2) h1, body #logo-sample [role="grid"] > [role="gridcell"]:nth-child(2) h1 { margin: 0; padding: 0; font-weight: 400; font-family: "Quicksand", -apple-system, Helvetica, Calibri, Arial, sans-serif; text-align: right; font-size: 3.65rem; line-height: 4.75rem; }
+body #logo [role="grid"] > [role="gridcell"]:nth-child(2) h1, body #logo-sample [role="grid"] > [role="gridcell"]:nth-child(2) h1 { margin: 0; padding: 0; font-weight: 400; font-family: "Quicksand", -apple-system, Helvetica, Calibri, Arial, sans-serif; text-align: left; font-size: 3.25rem; line-height: 4.75rem; }
 
 @media screen and (min-width: 33.75em) { body #logo [role="grid"] > [role="gridcell"]:nth-child(2) h1, body #logo-sample [role="grid"] > [role="gridcell"]:nth-child(2) h1 { font-size: 5rem; line-height: 5rem; text-align: left; } }
 
 @media screen and (min-width: 75em) { body #logo [role="grid"] > [role="gridcell"]:nth-child(2) h1, body #logo-sample [role="grid"] > [role="gridcell"]:nth-child(2) h1 { font-size: 4.3rem; } }
 
 body #logo [role="grid"] > [role="gridcell"]:nth-child(2) h1 a, body #logo-sample [role="grid"] > [role="gridcell"]:nth-child(2) h1 a { color: var(--sf-color-dark); text-decoration: none; }
+
+body #logo [role="grid"] > [role="gridcell"]:nth-child(2) h1 sup, body #logo-sample [role="grid"] > [role="gridcell"]:nth-child(2) h1 sup { font-size: 65%; top: -0.4em; margin-left: 0.25rem; }
 
 body #logo [role="grid"] > [role="gridcell"]:nth-child(3), body #logo-sample [role="grid"] > [role="gridcell"]:nth-child(3) { margin-top: 1.5rem; font-size: 1.25rem; text-align: center; }
 
