Changes for website deployment

--- a/styleguide/scss/custom/_buttons.scss
+++ b/styleguide/scss/custom/_buttons.scss
@@ -11,6 +11,14 @@
 
 // TBD
 
+[role="button"] {
+
+    &.blue {
+
+        background-color: var(--sf-color-primary);
+        border-color: var(--sf-color-primary);
+    }
+}
 
 //-----------------------------------------------------------------------//
 // STYLES
