New checkbox style (switches)

--- a/styleguide/scss/_config-colors.scss
+++ b/styleguide/scss/_config-colors.scss
@@ -46,7 +46,7 @@
     // BUTTONS
     @include sf-generate-css-color-property(
         $name: "buttons", 
-        $hex-color: #14a219, 
+        $hex-color: #13BF11, 
         $hex-contrast-color: #ffffff, 
         $alpha: 1.0, 
         $shade-pct: 15%, 
@@ -55,7 +55,7 @@
     // SUCCESS
     @include sf-generate-css-color-property(
         $name: "success", 
-        $hex-color: #14a219, 
+        $hex-color: #13BF11, 
         $hex-contrast-color: #ffffff, 
         $alpha: 1.0, 
         $shade-pct: 15%, 
