--- a/styleguide/scss/core/_core-initialize.scss
+++ b/styleguide/scss/core/_core-initialize.scss
@@ -17,6 +17,9 @@
     -moz-osx-font-smoothing: grayscale;
     -webkit-font-smoothing: antialiased;
 
+    -webkit-text-size-adjust: none;
+    -webkit-font-size-adjust: none;
+        
     -moz-hyphens: none;
     -ms-hyphens: none;
     -webkit-hyphens: none;
