Add space before menu h3

--- a/styleguide/scss/styleguide.scss
+++ b/styleguide/scss/styleguide.scss
@@ -260,7 +260,8 @@ body {
 
             & > div {
             
-                padding-top: var(--vertical-subunit-padding);
+                padding-top: 2rem;
+                // padding-top: var(--vertical-subunit-padding);
                 padding-bottom: 1rem;
             }
         }
