--- a/styleguide/stylesheets/styleguide.css
+++ b/styleguide/stylesheets/styleguide.css
@@ -876,7 +876,7 @@ body > main > [sf-unit] article#color-swatches-base > [role="gridcell"] > [role=
 @media screen and (min-width: 33.75em) { #toc-cell #open-menu { display: none; } }
 
 @media screen and (max-width: 33.74em) { #toc-cell [sf-subunit] { -moz-transition-property: max-height; -o-transition-property: max-height; -webkit-transition-property: max-height; transition-property: max-height; -moz-transition-duration: ease; -o-transition-duration: ease; -webkit-transition-duration: ease; transition-duration: ease; -moz-transition-timing-function: ease; -o-transition-timing-function: ease; -webkit-transition-timing-function: ease; transition-timing-function: ease; -moz-animation-delay: 0.35s; -o-animation-delay: 0.35s; -webkit-animation-delay: 0.35s; animation-delay: 0.35s; overflow: hidden; margin: 0; }
-  #toc-cell [sf-subunit] > div { padding-top: var(--vertical-subunit-padding); padding-bottom: 1rem; } }
+  #toc-cell [sf-subunit] > div { padding-top: 2rem; padding-bottom: 1rem; } }
 
 @media screen and (min-width: 33.75em) { #toc-cell [sf-subunit] { margin-bottom: 0; } }
 
