--- a/styleguide/scss/core/_core-layout.scss
+++ b/styleguide/scss/core/_core-layout.scss
@@ -142,12 +142,29 @@
 
         // AUTO WIDTH CELLS
 
-        &[#{$prefix}width-auto],
-        & > [role="gridcell"][#{$prefix}width-auto],
-        &[#{$prefix}width-auto="1"],
-        & > [role="gridcell"][#{$prefix}width-auto="1"],
-        &[#{$prefix}width-auto="true"],
-        & > [role="gridcell"][#{$prefix}width-auto="true"] {
+        // &[#{$prefix}nowrap],
+        // &[#{$prefix}nowrap="1"],
+        // &[#{$prefix}nowrap="true"],
+        & [style~="--#{$prefix}nowrap:"] {
+
+            flex-wrap: nowrap;
+        }
+
+        // &[#{$prefix}wrap],
+        // &[#{$prefix}wrap="1"],
+        // &[#{$prefix}wrap="true"],
+        & [style~="--#{$prefix}wrap:"] {
+
+            flex-wrap: wrap;
+        }
+
+        // &[#{$prefix}width-auto],
+        // & > [role="gridcell"][#{$prefix}width-auto],
+        // &[#{$prefix}width-auto="1"],
+        // & > [role="gridcell"][#{$prefix}width-auto="1"],
+        // &[#{$prefix}width-auto="true"],
+        // & > [role="gridcell"][#{$prefix}width-auto="true"],
+        & > [role="gridcell"][style~="--#{$prefix}width-auto:"] {
 
             width: auto;
             flex-grow: 1;
@@ -155,10 +172,11 @@
 
         // AUTO WIDTH CELLS
 
-        &[#{$prefix}width-auto="0"],
-        & > [role="gridcell"][#{$prefix}width-auto="0"],
-        &[#{$prefix}width-auto="false"],
-        & > [role="gridcell"][#{$prefix}width-auto="false"] {
+        // &[#{$prefix}width-auto="0"],
+        // & > [role="gridcell"][#{$prefix}width-auto="0"],
+        // &[#{$prefix}width-auto="false"],
+        // & > [role="gridcell"][#{$prefix}width-auto="false"],
+        & > [role="gridcell"][style~="--#{$prefix}width-fixed:"] {
 
             flex-grow: 0;
         }
@@ -266,7 +284,7 @@ body {
 
 
 // UNIT STYLING
-// These are the outer block containers that you stack to create your UX.
+// These are the outer block containers that you stack to create your UI.
 
 // <main>
 //     <section id="hero-unit" sf-unit>
