--- a/styleguide/scss/_config.scss
+++ b/styleguide/scss/_config.scss
@@ -5,7 +5,7 @@
 // SFUMATO VERSION
 // ==================================================================
 
-$sfumato-version: "2.0b1";
+$sfumato-version: "2.01";
 // sfumato Version can be displayed using <span id="sfumato-version" role="status"></span>
 span#sfumato-version[role="status"]::after {
 
